--- a/example/index.html
+++ b/example/index.html
@@ -78,7 +78,7 @@
             <td>Terry</td>
             <td>Mitchell</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="2" />
             </td>
           </tr>
           <tr class="row">
@@ -86,7 +86,7 @@
             <td>Emma</td>
             <td>Moore</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="3" />
             </td>
           </tr>
           <tr class="row">
@@ -94,7 +94,7 @@
             <td>Larry</td>
             <td>Young</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="4" />
             </td>
           </tr>
           <tr class="row">
@@ -102,7 +102,7 @@
             <td>Amanda</td>
             <td>Walker</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="5" />
             </td>
           </tr>
           <tr class="row">
@@ -110,7 +110,7 @@
             <td>Sara</td>
             <td>Sullivan</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="6" />
             </td>
           </tr>
           <tr class="row">
@@ -118,7 +118,7 @@
             <td>Tommy</td>
             <td>Green</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="7" />
             </td>
           </tr>
           <tr class="row">
@@ -126,7 +126,7 @@
             <td>Scott</td>
             <td>Reyes</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="8" />
             </td>
           </tr>
           <tr class="row">
@@ -134,7 +134,7 @@
             <td>Raimond</td>
             <td>Reed</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="9" />
             </td>
           </tr>
           <tr class="row">
@@ -142,7 +142,7 @@
             <td>Sam</td>
             <td>Parker</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="10" />
             </td>
           </tr>
           <tr class="row">
@@ -150,7 +150,7 @@
             <td>Peter</td>
             <td>Ortiz</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="11" />
             </td>
           </tr>
           <tr class="row">
@@ -158,7 +158,7 @@
             <td>Olivia</td>
             <td>Garden</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="12" />
             </td>
           </tr>
           <tr class="row">
@@ -166,7 +166,7 @@
             <td>Ava</td>
             <td>Mayer</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="13" />
             </td>
           </tr>
           <tr class="row">
@@ -174,7 +174,7 @@
             <td>John</td>
             <td>Robinson</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="14" />
             </td>
           </tr>
           <tr class="row">
@@ -182,7 +182,7 @@
             <td>Amelia</td>
             <td>Simpson</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="15" />
             </td>
           </tr>
           <tr class="row">
@@ -190,7 +190,7 @@
             <td>Charlotte</td>
             <td>Martinez</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="16" />
             </td>
           </tr>
           <tr class="row">
@@ -198,7 +198,7 @@
             <td>Sophia</td>
             <td>Jones</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="17" />
             </td>
           </tr>
           <tr class="row">
@@ -206,7 +206,7 @@
             <td>Alfred</td>
             <td>Jackson</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="18" />
             </td>
           </tr>
           <tr class="row">
@@ -214,7 +214,7 @@
             <td>Albert</td>
             <td>Hill</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="19" />
             </td>
           </tr>
           <tr class="row">
@@ -222,7 +222,7 @@
             <td>Howard</td>
             <td>Foster</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="20" />
             </td>
           </tr>
           <tr class="row">
@@ -230,7 +230,7 @@
             <td>Evelyn</td>
             <td>Evans</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="21" />
             </td>
           </tr>
           <tr class="row">
@@ -238,7 +238,7 @@
             <td>Richard</td>
             <td>Davis</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="22" />
             </td>
           </tr>
           <tr class="row">
@@ -246,7 +246,7 @@
             <td>Jim</td>
             <td>Brown</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="23" />
             </td>
           </tr>
           <tr class="row">
@@ -254,7 +254,7 @@
             <td>Emily</td>
             <td>Campbell</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="24" />
             </td>
           </tr>
           <tr class="row">
@@ -262,7 +262,7 @@
             <td>Ester</td>
             <td>González</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="25" />
             </td>
           </tr>
           <tr class="row">
@@ -270,7 +270,7 @@
             <td>Charlotte</td>
             <td>De La Rosa</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="26" />
             </td>
           </tr>
           <tr class="row">
@@ -278,7 +278,7 @@
             <td>Michael</td>
             <td>Wells</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="27" />
             </td>
           </tr>
           <tr class="row">
@@ -286,7 +286,7 @@
             <td>Mila</td>
             <td>Young</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="28" />
             </td>
           </tr>
           <tr class="row">
@@ -294,7 +294,7 @@
             <td>Kevin</td>
             <td>Harris</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="29" />
             </td>
           </tr>
           <tr class="row">
@@ -302,7 +302,7 @@
             <td>Hannah</td>
             <td>Gray</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="30" />
             </td>
           </tr>
           <tr class="row">
@@ -310,7 +310,7 @@
             <td>Clark</td>
             <td>Wayne</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="31" />
             </td>
           </tr>
           <tr class="row">
@@ -318,7 +318,7 @@
             <td>Ellie</td>
             <td>Fisher</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="32" />
             </td>
           </tr>
           <tr class="row">
@@ -326,7 +326,7 @@
             <td>Paul</td>
             <td>Phillips</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="33" />
             </td>
           </tr>
           <tr class="row">
@@ -334,7 +334,7 @@
             <td>Anthony</td>
             <td>Wright</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="34" />
             </td>
           </tr>
           <tr class="row">
@@ -342,7 +342,7 @@
             <td>Adam</td>
             <td>Baker</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="35" />
             </td>
           </tr>
           <tr class="row">
@@ -350,7 +350,7 @@
             <td>Samantha</td>
             <td>Morris</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="36" />
             </td>
           </tr>
           <tr class="row">
@@ -358,7 +358,7 @@
             <td>Peter</td>
             <td>Collins</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="37" />
             </td>
           </tr>
           <tr class="row">
@@ -366,7 +366,7 @@
             <td>Lily</td>
             <td>Sweet</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="38" />
             </td>
           </tr>
           <tr class="row">
@@ -374,7 +374,7 @@
             <td>Justin</td>
             <td>Cook</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="39" />
             </td>
           </tr>
           <tr class="row">
@@ -382,7 +382,87 @@
             <td>Tim</td>
             <td>Bell</td>
             <td>
-              <input type="checkbox" class="select-checkbox" value="1" />
+              <input type="checkbox" class="select-checkbox" value="40" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>41</td>
+            <td>Tom</td>
+            <td>Clancy</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="41" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>42</td>
+            <td>Frederique</td>
+            <td>Darragon</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="42" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>43</td>
+            <td>Jules</td>
+            <td>Vern</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="43" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>44</td>
+            <td>Amelia</td>
+            <td>Simpson</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="44" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>45</td>
+            <td>Mary</td>
+            <td>Hold</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="45" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>46</td>
+            <td>Valentino</td>
+            <td>Rossi</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="46" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>47</td>
+            <td>Peter</td>
+            <td>Thrive</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="47" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>48</td>
+            <td>Patrick</td>
+            <td>Jamison</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="48" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>49</td>
+            <td>Albert</td>
+            <td>Collins</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="49" />
+            </td>
+          </tr>
+          <tr class="row">
+            <td>50</td>
+            <td>John</td>
+            <td>McKenty</td>
+            <td>
+              <input type="checkbox" class="select-checkbox" value="50" />
             </td>
           </tr>
         </tbody>
